2002-07-30  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: apply misssing part from this patch
	  2002-07-27  Will Cohen  <wcohen@nc.rr.com>

	* dae/oprofiled.c:
	* doc/oprofile.1.in:
	* util/oprof_start:
	* doc/oprofile.xml: clarify than pgrp filter is the tty program
	  group id

2002-07-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.h:
	* pp/samples_file.cpp: op_get_cpu_nr_counters() / op_get_nr_counters()
	  merge

	* module/compat22.h:
	* module/x68/op_apic.c: __cli()/__sti() removal, this fix build up
	  to 2.5.29

	* module/op_fixmap.c: fix test_bit() warning

2002-07-27  Will Cohen  <wcohen@nc.rr.com>
 
	* gui/oprof_start_config.cpp: config_setting::config_setting()
	  uses uname to guess path to vmlinux. 

2002-07-27  John Levon  <levon@movementarian.org>

	* dae/opd_stats.h:
	* dae/opd_stats.c: 
	* dae/opd_proc.c: log unique samples vs. sample entries
 
2002-07-27  Will Cohen  <wcohen@nc.rr.com>
 
	* dae/oprofiled.c:
	* gui/oprof_start.cpp:
	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c: op_get_nr_counter() new, localize
	  op_nr_counter computations.

2002-07-26  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* utils/op_start: fix #587093, some option of op_start
	  was incorrectly checked

2002-07-26  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_time_options.cpp:
	* pp/oprofpp_options.cpp: output format header or details are illegal
	  if not combined with other output format flag

	* pp/opp_symbol.cpp:
	* pp/opp_symbol.h:
	* pp/oprofpp.cpp:
	* pp/outsymbflag.h: minor cleanup

2002-07-25  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.4cvs
 
2002-07-24  Kevin Puetz  <puetzk@iastate.edu>

	* gui/ui/oprof_start.base.ui: fix resize
 
2002-07-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/op_fileio.c:
	* libutil/op_fileio.h: opd_get_link() new, read a symlink filename
	* libutil++/file_manip.cpp: